fix(server): 홈 완료 스텝 수를 비연속 스텝에서도 정확히 계산 (#240)
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>